# rohansatapathy.com

./: .gitignore  LICENSE  README.md  config.py  pyproject.toml
app/: __init__.py  routes.py
app/pages/: how-i-built-this-website.md
app/static/: styles.css
app/templates/: about_me.html  base.html  post.html  posts.html
blog/: __init__.py  routes.py
blog/pages/: second-post.md  test-post.md
blog/static/: arithmatex-auto-render.js
blog/templates/: about_me.html  base.html  index.html  page.html
posts/: _test_post.md  about.md  how-i-built-this-website.md
rohansatapathy_com/: app.py  config.py  routes.py  styles.py
rohansatapathy_com/static/: dark-mode.js  styles.css
rohansatapathy_com/templates/: about_me.html  base.html  post.html  posts.html
