[tool.poetry]
name = "blog"
version = "0.1.0"
description = ""
authors = ["Rohan Satapathy <satapathyrohan13@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.0.1"
python-dotenv = "^0.19.0"
Frozen-Flask = "^0.18"
Flask-FlatPages = "^0.7.3"
Pygments = "^2.9.0"
pymdown-extensions = "^8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
