[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "blog"
version = "0.1.0"
description = ""
authors = [
    {name = "Rohan Satapathy", email = "61920401+rohansatapathy@users.noreply.github.com"},
]
dependencies = [
    "Flask>=2.2",
    "python-dotenv>=1.0.1",
    "Flask-FlatPages<1.0.0,>=0.7.3",
    "Pygments<3.0.0,>=2.9.0",
    "pymdown-extensions>=9.4",
    "gunicorn<21.0.0,>=20.1.0",
]
requires-python = "<4.0,>=3.9"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false

[tool.pdm.build]
includes = []

